--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -15,6 +15,7 @@ android {
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -49,4 +50,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.0') // ✅ BoM manages Firebase versions
     implementation 'com.google.firebase:firebase-analytics' // ✅ Add other Firebase modules as needed
     implementation 'androidx.multidex:multidex:2.0.1' // ✅ Required if using multiDex
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4' 
+    
+    // implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.7.2' // Add this line for Mapbox
+
+
+
 }
