--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -29,6 +29,16 @@
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UISupportedInterfaceOrientations</key>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<key>NSLocationWhenInUseUsageDescription</key>
+<string>We need your location for Mapbox</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>We need your location for Mapbox</string>
+
+<string>We need access to your photo library to pick images.</string>
+<key>NSCameraUsageDescription</key>
+<string>We need access to your camera to pick images.</string>
+
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
