--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.15.2
-  firebase_auth: ^5.7.0
+  
+  
   device_preview: ^1.3.1
   cloud_firestore: ^5.6.12
   google_maps_flutter: ^2.12.3
@@ -43,10 +43,12 @@ dependencies:
   location: ^8.0.1
   geolocator: ^14.0.2
   http: ^0.13.6
-  firebase_messaging: ^15.2.10
+  
   flutter_local_notifications: ^18.0.1
   image_picker: ^1.1.2
-  firebase_storage: ^12.4.10
+  
+  cloud_functions: ^5.6.2
+  supabase_flutter: ^2.9.1
   
 
 dev_dependencies:
