--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   
   cloud_functions: ^5.6.2
   supabase_flutter: ^2.9.1
+  uuid: ^4.5.1
+  path: ^1.9.1
+  url_launcher: ^6.3.2
   
 
 dev_dependencies:
