--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   uuid: ^4.5.1
   path: ^1.9.1
   url_launcher: ^6.3.2
+  intl: ^0.20.2
+  onesignal_flutter: ^5.3.4
   
 
 dev_dependencies:
